Fix spacing in nav bar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,4 +16,9 @@ nav > span {
   padding-right: 1.5em;
 }
 
+nav > div {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+}
+
 
